<?xml version="1.0"?>
<package format="2">
  <name>map_saver</name>
  <version>0.0.1</version>
  <description>Simple OccupancyGrid map saver for Hector SLAM maps.</description>

  <maintainer email="lcy@todo.todo">lcy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
